# pyWikiCommons

./: .gitignore  README.md  ToDo.md  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: README.md  build_test.yml  deploy_pypi.yml  deploy_testpypi.yml
pyWikiCommons/: README.md  __init__.py  props.py  pyWikiCommons.py  wikiCommons.py
tests/: test_pyWikiCommons.py
