[metadata]
name = pyWikiCommons
author = AJ McKenna
author_email = amckenna41@qub.ac.uk
version = 0.0.3
description = Python package for downloading images and videos from Wikimedia Commons using the Wikimedia API.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = find:

install_requies =
   requests

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-timeout
docs =
    sphinx

[tool:pytest]
norecursedirs = /docs/_build/*